--- a/Resources_original/img/character/teacher/teacher.plist
+++ b/Resources_original/img/character/teacher/teacher.plist
@@ -4,170 +4,170 @@
 	<dict>
 		<key>frames</key>
 		<dict>
-			<key>Ctaihou_0_0.png</key>
+			<key>teacher_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,0},{25,32}}</string>
+				<string>{{67,0},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{3,0},{25,32}}</string>
+				<string>{{5,0},{21,33}}</string>
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
 
-			<key>Ctaihou_0_1.png</key>
+			<key>teacher_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,33},{25,33}}</string>
+				<string>{{0,0},{22,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{3,0},{25,33}}</string>
+				<string>{{5,0},{22,33}}</string>
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
 
-			<key>Ctaihou_0_2.png</key>
+			<key>teacher_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,67},{25,33}}</string>
+				<string>{{0,34},{22,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{4,0},{25,33}}</string>
+				<string>{{4,0},{22,33}}</string>
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
 
-			<key>Ctaihou_1_0.png</key>
+			<key>teacher_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{52,66},{24,32}}</string>
+				<string>{{45,34},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{3,0},{24,32}}</string>
+				<string>{{5,0},{21,33}}</string>
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
 
-			<key>Ctaihou_1_1.png</key>
+			<key>teacher_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{77,33},{24,32}}</string>
+				<string>{{45,0},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{3,0},{24,32}}</string>
+				<string>{{5,0},{21,33}}</string>
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
 
-			<key>Ctaihou_1_2.png</key>
+			<key>teacher_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{77,0},{24,32}}</string>
+				<string>{{44,68},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{3,0},{24,32}}</string>
+				<string>{{5,0},{21,33}}</string>
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
 
-			<key>Ctaihou_2_0.png</key>
+			<key>teacher_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{77,66},{24,32}}</string>
+				<string>{{67,34},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{5,0},{24,32}}</string>
+				<string>{{6,0},{21,33}}</string>
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
 
-			<key>Ctaihou_2_1.png</key>
+			<key>teacher_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{52,0},{24,32}}</string>
+				<string>{{66,68},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{5,0},{24,32}}</string>
+				<string>{{6,0},{21,33}}</string>
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
 
-			<key>Ctaihou_2_2.png</key>
+			<key>teacher_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{52,33},{24,32}}</string>
+				<string>{{22,68},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{5,0},{24,32}}</string>
+				<string>{{6,0},{21,33}}</string>
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
 
-			<key>Ctaihou_3_0.png</key>
+			<key>teacher_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,68},{25,32}}</string>
+				<string>{{23,34},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{3,0},{25,32}}</string>
+				<string>{{5,0},{21,33}}</string>
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
 
-			<key>Ctaihou_3_1.png</key>
+			<key>teacher_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,34},{25,33}}</string>
+				<string>{{23,0},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{3,0},{25,33}}</string>
+				<string>{{6,0},{21,33}}</string>
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
 
-			<key>Ctaihou_3_2.png</key>
+			<key>teacher_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{25,33}}</string>
+				<string>{{0,68},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{3,0},{25,33}}</string>
+				<string>{{5,0},{21,33}}</string>
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
@@ -181,7 +181,7 @@
 			<key>size</key>
 			<string>{128,128}</string>
 			<key>textureFileName</key>
-			<string>Ctaihou.png</string>
+			<string>teacher.png</string>
 			</dict>
 		</dict>
 </plist>
